# cluttered

./: .gitignore  Cargo.toml  README.md
.cargo/: cargo.toml
.github/workflows/: rust.yml
samples/: packer-config.ron  packer-config.toml  ratter-template.cs  xml-template.xml
samples/images/rect/: rect1.json  rect2.json  rect3.ron  rect4.ron
src/: atlas.rs  error.rs  main.rs
src/atlas/: output.rs
