[package]
name = "clutter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crunch = "0.3.0"
image = "0.23.8"
ron = "0.8.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
clap = { version = "4.1.1", features = ["derive"] }
anyhow = "1.0.65"
thiserror = "1.0.37"
binary_rw = { git = "https://github.com/Terria-K/binary_rw" }
