[package]
name = "cluttered"
version = "0.9.2"
edition = "2021"
description = "A CLI Texture Packer written in rust"
readme = "README.md"
repository = "https://github.com/Terria-K/cluttered"
license = "MIT"
keywords = ["packer", "atlas", "sprite"]
categories = ["graphics", "encoding", "command-line-utilities"]

[dependencies]
crunch = "0.3.3"
image = "0.23.8"
ron = "0.8.0"
toml = "0.7.2"
rapid-qoi = "0.6.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
clap = { version = "4.1.1", features = ["derive"] }
anyhow = "1.0.65"
thiserror = "1.0.37"
handlebars_misc_helpers = { version = "0.13.0", features = ["string"] }
binary_rw = "4.0.4"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
